--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
 body {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Inter', sans-serif;
     overflow: hidden;
   }
   body.selection-type-1 ::selection {
