--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,147 +1,155 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
 
 body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    font-size: 20px;
-    font-family: 'Inter', sans-serif;
-    overflow: hidden;
-  }
-  body.selection-type-1 ::selection {
-    color: #fff;
-    background: #000;
-  }
-  
-  body.selection-type-2 ::selection {
-    color: #fff;
-    background: #f7f7f7;
-  }
-  
-  .mt1 {
-    margin-top: 1em;
-  }
-  .w500 {
-    max-width: 500px;
-  }
-  section {
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 0.6s ease-out;
-    visibility: hidden;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  section pre {
-    margin: 0;
-    padding: 2em;
-    font-size: 1em;
-  }
-  section code {
-    margin: 0;
-    padding: 0;
-    font-size: 1em;
-  }
-  #progress {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 4px;
-    z-index: 10;
-    background: #00009f;
-    transition: width 0.5s ease-out;
-  }
-  a {
-    text-decoration: underline;
-    color: #00009f;
-  }
-  ul {
-    list-style: none;
-  }
-  ul li::before {
-    content: "• ";
-    font-size: 0.8em;
-  }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p {
-    padding: 0 2em;
-    margin: 0.5em 0;
-    text-align: center;
-  }
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  font-family: "Inter", sans-serif;
+  overflow: hidden;
+}
+body.selection-type-1 ::selection {
+  color: #fff;
+  background: #000;
+}
 
-  p {
-    padding: 0;
-  }
+body.selection-type-2 ::selection {
+  color: #fff;
+  background: #f7f7f7;
+}
 
-  blockquote p, li p {
-    text-align: left;
-  }
+.mt1 {
+  margin-top: 1em;
+}
+.w500 {
+  max-width: 500px;
+}
+section {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.6s ease-out;
+  visibility: hidden;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+section pre {
+  margin: 0;
+  padding: 2em;
+  font-size: 1em;
+}
+section code {
+  margin: 0;
+  padding: 0;
+  font-size: 1em;
+}
+#progress {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 4px;
+  z-index: 10;
+  background: #00009f;
+  transition: width 0.5s ease-out;
+}
+a {
+  text-decoration: underline;
+  color: #00009f;
+}
+ul {
+  list-style: none;
+}
+ul li::before {
+  content: "• ";
+  font-size: 0.8em;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  padding: 0 2em;
+  margin: 0.5em 0;
+  text-align: center;
+}
 
-  h1 {
-    font-size: 2em;
-    line-height: 0.6em;
-  }
-  h1 small {
-    font-size: 0.4em;
-  }
-  h2 {
-    font-size: 1.6em;
-  }
-  h3 {
-    font-size: 1.2em;
-  }
-  p code {
-    color: #d6deeb;
-    background: rgba(29, 59, 83, 0.99);
-    padding: 0 0.2em;
-  }
-  
-  blockquote {
-    border-style: solid;
-    border-width: 0;
-    --tw-border-opacity: 1;
-    padding-left: 1.5rem;
-    border-left-width: 2px;
-    border-color: #f57070;
-    --tw-text-opacity: 1;
-    color: rgb(148 163 184/var(--tw-text-opacity));
-  }
+p {
+  padding: 0;
+}
 
-  table {
-    border-collapse: collapse;
-  }
-  table td,  table th {
-    padding: 15px;
-  }
-  table thead th {
-    background-color: #54585d;
-    color: #ffffff;
-    font-weight: bold;
-    font-size: 13px;
-    border: 1px solid #54585d;
-  }
-  table tbody td {
-    color: #636363;
-    border: 1px solid #dddfe1;
-  }
-  table tbody tr {
-    background-color: #f9fafb;
-  }
+blockquote p,
+li p {
+  text-align: left;
+}
 
-  /* // PRISM */
+h1 {
+  font-size: 2em;
+  line-height: 0.6em;
+}
+h1 small {
+  font-size: 0.4em;
+}
+h2 {
+  font-size: 1.6em;
+}
+h3 {
+  font-size: 1.2em;
+}
+p code,
+h1 code,
+h2 code,
+h3 code,
+h4 code,
+h5 code,
+h6 code {
+  color: #d6deeb;
+  background: rgba(29, 59, 83, 0.99);
+  padding: 0 0.2em;
+}
 
-  code[class*="language-"],
+blockquote {
+  border-style: solid;
+  border-width: 0;
+  --tw-border-opacity: 1;
+  padding-left: 1.5rem;
+  border-left-width: 2px;
+  border-color: #f57070;
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity));
+}
+
+table {
+  border-collapse: collapse;
+}
+table td,
+table th {
+  padding: 15px;
+}
+table thead th {
+  background-color: #54585d;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 13px;
+  border: 1px solid #54585d;
+}
+table tbody td {
+  color: #636363;
+  border: 1px solid #dddfe1;
+}
+table tbody tr {
+  background-color: #f9fafb;
+}
+
+/* // PRISM */
+
+code[class*="language-"],
 pre[class*="language-"] {
   color: #d6deeb;
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
